--- a/Project.Blog.Web/Views/Home/Index.cshtml
+++ b/Project.Blog.Web/Views/Home/Index.cshtml
@@ -6,9 +6,10 @@
         <div class="card-body">
             <h2 class="card-title">@sharing.Title</h2>
             <p class="card-text">@sharing.Description</p>
+            <a href="/Home/SharingDetail/1">See Comments</a>
         </div>
         <div class="card-footer text-muted">
-            Posted on 02.01.2020
+            Posted on @sharing.SharingDate.ToLongDateString()
         </div>
 
     </div>
