--- a/Project.Blog.Web/Views/Home/Detail.cshtml
+++ b/Project.Blog.Web/Views/Home/Detail.cshtml
@@ -1,5 +1,6 @@
-﻿        <!-- Title -->
-<h1 class="mt-4">Post Title</h1>
+﻿@model SharingListModel
+<!-- Title -->
+<h1 class="mt-4">@Model.Title</h1>
 
 <!-- Author -->
 <p class="lead">
@@ -10,33 +11,17 @@
 <hr>
 
 <!-- Date/Time -->
-<p>Posted on January 1, 2019 at 12:00 PM</p>
+<p>Posted on @Model.SharingDate.ToLongDateString()</p>
 
 <hr>
 
-<!-- Preview Image -->
-<img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+
 
 <hr>
 
 <!-- Post Content -->
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+<p class="lead">@Model.Description</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-
-<blockquote class="blockquote">
-    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-    <footer class="blockquote-footer">
-        Someone famous in
-        <cite title="Source Title">Source Title</cite>
-    </footer>
-</blockquote>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
 
 <hr>
 
