--- a/Project.Blog.Web/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/Project.Blog.Web/Views/Shared/Components/CategoryList/Default.cshtml
@@ -7,7 +7,7 @@
         <div class="list-group">
             <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                 @category.Name
-                <span class="badge badge-primary badge-pill">14</span>
+                <span class="badge badge-primary badge-pill">@category.Number</span>
             </a>
         </div>
     }
