--- a/Project.Blog.Web/Views/Home/Login.cshtml
+++ b/Project.Blog.Web/Views/Home/Login.cshtml
@@ -1,26 +1,58 @@
 ﻿@model UserLoginModel
 @{
     ViewData["Title"] = "SignIn";
+    Layout = "_AccountLayout";
 }
 
-<h1>SignIn</h1>
-<form asp-action="Login" asp-controller="Home" method="post">
-    <div>
-        <label asp-for="@Model.Username"></label>
-        <span asp-validation-for="@Model.Username"></span>
-        <input asp-for="@Model.Username" />
-    </div>
-    <div>
-        <label asp-for="@Model.Password"></label>
-        <span asp-validation-for="@Model.Password"></span>
-        <input asp-for="@Model.Password" />
-    </div>
-    <div>
-        <input type="checkbox" asp-for="@Model.RememberMe" />
-        <label asp-for="@Model.RememberMe">Remember me</label>
-    </div>
-    <input type="submit" value="Login" />
-    <a asp-action="Register" asp-controller="Home">Sign up</a>
+
+    <div  style="padding:150px;padding-top:100px">
+        <div class="">
+            <div class="">
+                <form asp-action="Login" asp-controller="Home" method="post">
+                    <div style="text-align:center">
+                        <span>
+                            LOGIN
+                        </span>
+                    </div>
+                    
+
+                    
+                        <label asp-for="@Model.Username"></label>
+                        <span asp-validation-for="@Model.Username"></span>
+                        <input asp-for="@Model.Username">
 
 
-</form>
+                   
+                        <label asp-for="@Model.Password"></label>
+                        <span asp-validation-for="@Model.Password"></span>
+                        <input asp-for="@Model.Password" type="password"  >
+
+                        <input type="checkbox" asp-for="@Model.RememberMe" />
+                        <label asp-for="@Model.RememberMe">Remember me</label>
+                 
+                        <input type="submit" value="Login" />
+               
+
+                    <div class="text-center p-t-45 p-b-4">
+                        <span class="txt1">
+                            Forgot
+                        </span>
+
+                        <a href="#" class="txt2 hov1">
+                            Username / Password?
+                        </a>
+                    </div>
+
+                    <div class="text-center">
+                        <span class="txt1">
+                            Create an account?
+                        </span>
+
+                        <a asp-action="Register" asp-controller="Home" class="txt2 hov1">
+                            Sign up
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
