--- a/Project.Blog.Web/Views/Home/Register.cshtml
+++ b/Project.Blog.Web/Views/Home/Register.cshtml
@@ -1,35 +1,36 @@
 ﻿@model UserRegisterModel
 @{
     ViewData["Title"] = "SignUp";
+    Layout = "_AccountLayout";
 }
 <h1>Register</h1>
 <form asp-action="Register" asp-controller="Home" method="post">
-    <div>
+    <div class="row">
         <label asp-for="@Model.Username"></label>
         <span asp-validation-for="@Model.Username"></span>
         <input asp-for="@Model.Username" />
     </div>
-    <div>
+    <div  class="row">
         <label asp-for="@Model.Password"></label>
         <span asp-validation-for="@Model.Password"></span>
         <input asp-for="@Model.Password" />
     </div>
-    <div>
+    <div  class="row">
         <label asp-for="@Model.ConfirmPassword"></label>
         <span asp-validation-for="@Model.ConfirmPassword"></span>
         <input asp-for="@Model.ConfirmPassword" />
     </div>
-    <div>
+    <div  class="row">
         <label asp-for="@Model.Name"></label>
         <span asp-validation-for="@Model.Name"></span>
         <input asp-for="@Model.Name" />
     </div>
-    <div>
+    <div  class="row">
         <label asp-for="@Model.LastName"></label>
         <span asp-validation-for="@Model.LastName"></span>
         <input asp-for="@Model.LastName" />
     </div>
-    <div>
+    <div  class="row">
         <label asp-for="@Model.Email"></label>
         <span asp-validation-for="@Model.Email"></span>
         <input asp-for="@Model.Email" />
