--- a/Project.Blog.Web/Views/Shared/_AccountLayout.cshtml
+++ b/Project.Blog.Web/Views/Shared/_AccountLayout.cshtml
@@ -15,7 +15,8 @@
     <!-- Custom styles for this template -->
     <link href="~/css/blog-home.css" rel="stylesheet">
 
-   
+    <link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
+    
 
 </head>
 
@@ -24,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a asp-controller="Home" asp-action="Index" class="navbar-brand" >Start Bootstrap</a>
+            <a asp-controller="Home" asp-action="Index" class="navbar-brand">Start Bootstrap</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,57 +57,20 @@
         <div class="row">
 
             <!-- Blog Entries Column -->
-            <div class="col-md-8">
+            <div class="col-md">
 
-                <h1 class="my-4">
-                </h1>
+              
                 <div>
                     @RenderBody()
                 </div>
 
-                <!-- Pagination -->
-                <ul class="pagination justify-content-center mb-4">
-                    <li class="page-item">
-                        <a class="page-link" href="#">&larr; Older</a>
-                    </li>
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#">Newer &rarr;</a>
-                    </li>
-                </ul>
+                
 
             </div>
 
-            <!-- Sidebar Widgets Column -->
-            <div class="col-md-4">
-
-                <!-- Search Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Search</h5>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <span class="input-group-append">
-                                <button class="btn btn-secondary" type="button">Go!</button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Categories Widget -->
-                @await Component.InvokeAsync("CategoryList")
-
-                <!-- Side Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Side Widget</h5>
-                    <div class="card-body">
-                        You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-                    </div>
-                </div>
-
-            </div>
+            
 
         </div>
-        <!-- /.row -->
 
     </div>
     <!-- /.container -->
@@ -121,7 +85,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="~/jquery/jquery.min.js"></script>
     <script src="~/twitter-bootstrap/js/bootstrap.bundle.min.js"></script>
-   
+    
 </body>
 
 </html>
