added fetching comments

--- a/Project.Blog.Web/Views/Home/Detail.cshtml
+++ b/Project.Blog.Web/Views/Home/Detail.cshtml
@@ -1,25 +1,23 @@
 ﻿@model SharingListModel
 @{
-    /*var Comments = ViewBag.Comments;
+    var comments = ViewBag.Comments;
     void GetComments(List<CommentListModel> comments)
     {
         if (comments.Count > 0)
         {
             foreach (var comment in comments)
             {
-    <div class="media mb-4">
-        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-        <div class="media-body">
-            <h5 class="mt-0">Commenter Name</h5>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-        </div>
-    </div> 
+                <div class="media mb-4">
+                    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                    <div class="media-body">
+                        <h5 class="mt-0">@comment.UserName</h5>
+                         @comment.Description
+                    </div>
+                </div>
             }
 
         }
-
-
-    }*/
+    }
 }
 <!-- Title -->
 <h1 class="mt-4">@Model.Title</h1>
@@ -27,7 +25,7 @@
 <!-- Author -->
 <p class="lead">
     by
-    <a href="#">Start Bootstrap</a>
+    <a href="#">@Model.UserName</a>
 </p>
 
 <hr>
@@ -61,11 +59,7 @@
 </div>
 
 <!-- Single Comment -->
-<div class="media mb-4">
-    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-    <div class="media-body">
-        <h5 class="mt-0">Commenter Name</h5>
-        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-</div>
 
+@{
+    GetComments(comments);
+}
