--- a/Project.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Project.Blog.Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" asp-controller="Share" asp-action="Index">Share</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
