--- a/Project.Blog.Web/Views/Share/Index.cshtml
+++ b/Project.Blog.Web/Views/Share/Index.cshtml
@@ -10,7 +10,8 @@
         <form asp-action="Index" asp-controller="Share" method="post">
             <div class="form-group">
                 <label asp-for="@Model.Title">Title</label>
-                <input asp-for="@Model.Title" type="text" class="form-control" >
+                <input asp-for="@Model.Title" type="text" class="form-control">
+                <span asp-validation-for="@Model.Title" class="text-danger"></span>
             </div>
 
             <div class="form-group">
@@ -24,6 +25,8 @@
             </div>
             <div class="form-group">
                 <textarea asp-for="@Model.Description" name="description" class="form-control" rows="5"></textarea>
+                <span asp-validation-for="@Model.Description" class="text-danger"></span>
+
             </div>
             <input type="submit" class="btn btn-primary" value="Submit">
         </form>
