--- a/Project.Blog.Web/Views/Share/Index.cshtml
+++ b/Project.Blog.Web/Views/Share/Index.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="@Model.Description" class="text-danger"></span>
 
             </div>
-            <input type="submit" class="btn btn-primary" value="Submit">
+            <input type="submit" class="btn btn-primary" value="Send">
         </form>
     </div>
 </div>
