--- a/Project.Blog.Web/Views/Home/Detail.cshtml
+++ b/Project.Blog.Web/Views/Home/Detail.cshtml
@@ -57,7 +57,7 @@
             <div>
                 <input name="sharingId" type="hidden" value="@Model.Id" />
             </div>
-            <input type="submit" class="btn btn-primary" value="Submit">
+            <input type="submit" class="btn btn-primary" value="Send">
         </form>
     </div>
 </div>
