--- a/Project.Blog.Web/Views/Home/Register.cshtml
+++ b/Project.Blog.Web/Views/Home/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserRegisterModel
 @{
     ViewData["Title"] = "SignUp";
-    Layout = "_AccountLayout";
+    Layout = "_Layout";
 }
 <h1>Register</h1>
 <form asp-action="Register" asp-controller="Home" method="post">
