--- a/Project.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Project.Blog.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject SignInManager<User> SignInManager;
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,7 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="~/css/blog-home.css" rel="stylesheet">
 
-   
+
 
 </head>
 
@@ -24,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a asp-controller="Home" asp-action="Index" class="navbar-brand" >Start Bootstrap</a>
+            <a asp-controller="Home" asp-action="Index" class="navbar-brand">Start Bootstrap</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,9 +44,19 @@
                         <a class="nav-link" asp-controller="Share" asp-action="Index">Share</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                            @if (SignInManager.IsSignedIn(User))
+                            {
+                                <a class="nav-link" asp-controller="Home" asp-action="Logout">Logout</a>
+
+                            }
+                            else
+                            {
+                                <a class="nav-link" asp-controller="Home" asp-action="Login">Login</a>
+
+                            }
+
                     </li>
-                </ul>
+                    </ul>
             </div>
         </div>
     </nav>
@@ -55,42 +66,7 @@
 
         <div class="row">
 
-            <!-- Blog Entries Column -->
-            <div class="col-md-8">
-
-                <h1 class="my-4">
-                </h1>
-                <div>
-                    @RenderBody()
-                </div>
-
-                <!-- Pagination -->
-                
-
-            </div>
-
-            <!-- Sidebar Widgets Column -->
-            <div class="col-md-4">
-
-                <!-- Search Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Search</h5>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <span class="input-group-append">
-                                <button class="btn btn-secondary" type="button">Go!</button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Categories Widget -->
-                @await Component.InvokeAsync("CategoryList")
-
-                
-
-            </div>
+            @RenderBody()
 
         </div>
         <!-- /.row -->
@@ -108,7 +84,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="~/jquery/jquery.min.js"></script>
     <script src="~/twitter-bootstrap/js/bootstrap.bundle.min.js"></script>
-   
+
 </body>
 
 </html>
