--- a/Project.Blog.Web/Views/_ViewImports.cshtml
+++ b/Project.Blog.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿
 @using Project.Blog.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Identity
+@using Project.Blog.Entities.Concrete;
