--- a/Project.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Project.Blog.Web/Views/Shared/_Layout.cshtml
@@ -9,11 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog Home - Start Bootstrap Template</title>
-    <!-- Bootstrap core CSS -->
+    <title>Sample Blog</title>
+
     <link href="~/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+
     <link href="~/css/blog-home.css" rel="stylesheet">
 
 
@@ -22,10 +22,10 @@
 
 <body>
 
-    <!-- Navigation -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a asp-controller="Home" asp-action="Index" class="navbar-brand">Start Bootstrap</a>
+            <a asp-controller="Home" asp-action="Index" class="navbar-brand">Sample Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,9 +37,7 @@
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Share" asp-action="Index">Share</a>
                     </li>
@@ -61,7 +59,6 @@
         </div>
     </nav>
 
-    <!-- Page Content -->
     <div class="container">
 
         <div class="row">
@@ -69,19 +66,16 @@
             @RenderBody()
 
         </div>
-        <!-- /.row -->
 
     </div>
-    <!-- /.container -->
-    <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
         </div>
-        <!-- /.container -->
+
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
+
     <script src="~/jquery/jquery.min.js"></script>
     <script src="~/twitter-bootstrap/js/bootstrap.bundle.min.js"></script>
 
