--- a/Project.Blog.Web/Views/Home/Detail.cshtml
+++ b/Project.Blog.Web/Views/Home/Detail.cshtml
@@ -42,7 +42,7 @@
         <hr>
 
         <!-- Date/Time -->
-        <p>Posted on @Model.SharingDate.ToLongDateString()</p>
+        <p>Posted on @Model.SharingDate.ToString("MM/dd/yyyy h:mm ")</p>
 
         <hr>
 
