--- a/Project.Blog.Web/Views/Share/Index.cshtml
+++ b/Project.Blog.Web/Views/Share/Index.cshtml
@@ -3,33 +3,36 @@
     ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
+    
 
-<div class="card my-4">
-    <h5 class="card-header">Leave a Sharing:</h5>
-    <div class="card-body">
-        <form asp-action="Index" asp-controller="Share" method="post">
-            <div class="form-group">
-                <label asp-for="@Model.Title">Title</label>
-                <input asp-for="@Model.Title" type="text" class="form-control">
-                <span asp-validation-for="@Model.Title" class="text-danger"></span>
-            </div>
+    <div class="container">
+        <div class="card my-4">
+            <h5 class="card-header">Leave a Sharing:</h5>
+            <div class="card-body">
+                <form asp-action="Index" asp-controller="Share" method="post">
+                    <div class="form-group">
+                        <label asp-for="@Model.Title">Title</label>
+                        <input asp-for="@Model.Title" type="text" class="form-control">
+                        <span asp-validation-for="@Model.Title" class="text-danger"></span>
+                    </div>
 
-            <div class="form-group">
-                <label asp-for="@Model.CategoryId">Category</label>
-                <select class="form-control" asp-for="@Model.CategoryId" >
-                    <option value="1">Book</option>
-                    <option value="2">Movie</option>
-                    <option value="3">Music</option>
-                    <option value="4">Travel</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <textarea asp-for="@Model.Description" name="description" class="form-control" rows="5"></textarea>
-                <span asp-validation-for="@Model.Description" class="text-danger"></span>
+                    <div class="form-group">
+                        <label asp-for="@Model.CategoryId">Category</label>
+                        <select class="form-control" asp-for="@Model.CategoryId">
+                            <option value="1">Book</option>
+                            <option value="2">Movie</option>
+                            <option value="3">Music</option>
+                            <option value="4">Travel</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <textarea asp-for="@Model.Description" name="description" class="form-control" rows="5"></textarea>
+                        <span asp-validation-for="@Model.Description" class="text-danger"></span>
 
+                    </div>
+                    <input type="submit" class="btn btn-primary" value="Send">
+                </form>
             </div>
-            <input type="submit" class="btn btn-primary" value="Send">
-        </form>
+        </div>
+
     </div>
-</div>
-
