--- a/Project.Blog.Web/Views/Home/Index.cshtml
+++ b/Project.Blog.Web/Views/Home/Index.cshtml
@@ -13,6 +13,10 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title">@sharing.Title</h2>
+                    <p class="lead">
+                        By
+                        <a href="#">@sharing.UserName</a>
+                    </p>
                     <p class="card-text">@sharing.Description</p>
                     <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">See Comments</a>
                 </div>
