--- a/Project.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Project.Blog.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 
 </head>
 
-<body>
+<body >
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -71,9 +71,9 @@
         </div>
 
     </div>
-    <footer class="py-5 bg-dark">
+    <footer class="py-3 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Sample Blog 2020</p>
         </div>
 
     </footer>
