--- a/Project.Blog.Web/Views/Home/Index.cshtml
+++ b/Project.Blog.Web/Views/Home/Index.cshtml
@@ -1,6 +1,44 @@
 ﻿@model List<SharingListModel>
 
+@{ 
+    /*string convertDate(DateTime sharingDate)
+    {
 
+        var difference = (DateTime.Now - sharingDate).TotalDays;
+        if (difference < 1)
+        {
+            difference = Convert.ToInt32((DateTime.Now - sharingDate).TotalHours);
+            if (difference == 0)
+            {
+                return Convert.ToInt32((DateTime.Now - sharingDate).TotalMinutes).ToString() + " minutes ago";
+            }
+            else
+            {
+                return Convert.ToInt32((DateTime.Now - sharingDate).TotalHours).ToString() + " hours ago";
+
+            }
+
+        }
+        else if (difference > 1 && difference < 30)
+        {
+            return Convert.ToInt32(difference).ToString() + " days ago";
+        }
+        else if (difference > 30 && difference < 365)
+        {
+            return Convert.ToInt32((((DateTime.Now - sharingDate).TotalDays) / 30) - 1).ToString() + " months ago";
+
+        }
+        else if (difference > 365)
+        {
+            return Convert.ToInt32((((DateTime.Now - sharingDate).TotalDays) / 365)).ToString() + " years ago";
+        }
+        else
+        {
+            return "";
+        }
+
+    }*/
+}
 
 
 
@@ -17,11 +55,16 @@
                         By
                         <a href="#">@sharing.UserName</a>
                     </p>
+                    
                     <p class="card-text">@sharing.Description</p>
                     <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">See Comments</a>
                 </div>
                 <div class="card-footer text-muted">
-                    Posted on @sharing.SharingDate.ToString("MM/dd/yyyy h:mm ")
+                    @{ 
+
+                    }
+                    @sharing.SharingDate.ToString("dddd, MMMM dd yyyy", new System.Globalization.CultureInfo("en-US")) by  <a href="#">@sharing.UserName</a>
+
                 </div>
 
             </div>
