--- a/Project.Blog.Web/Views/Home/Login.cshtml
+++ b/Project.Blog.Web/Views/Home/Login.cshtml
@@ -5,42 +5,32 @@
 }
 
 
-    <div  style="padding:150px;padding-top:100px">
-        <div class="">
-            <div class="">
-                <form asp-action="Login" asp-controller="Home" method="post">
-                    <div style="text-align:center">
-                        <span>
-                            LOGIN
-                        </span>
-                    </div>
-                        <label asp-for="@Model.Username"></label>
-                        <span asp-validation-for="@Model.Username"></span>
-                        <input asp-for="@Model.Username">
+    <div class="container">
+        <div style="text-align:center;padding-left:20%;padding-right:20%">
+            <div class="card my-4">
+                <h5 class="card-header">Login</h5>
+                <div class="card-body text-center">
+                    <form asp-action="Index" asp-controller="Share" method="post">
+                        <div class="form-group">
+                            <label asp-for="@Model.Username" style="font-weight:bold"></label>
+                            <span asp-validation-for="@Model.Username"></span>
+                            <input asp-for="@Model.Username">
+                        </div>
 
+                        <div class="form-group">
+                            <label asp-for="@Model.Password"  style="font-weight:bold"></label>
+                            <span asp-validation-for="@Model.Password"></span>
+                            <input asp-for="@Model.Password" type="password">
+                        </div>
+                        <div class="form-group">
+                            <input type="checkbox" asp-for="@Model.RememberMe" />
+                            <label asp-for="@Model.RememberMe">Remember me</label>
+                        </div>
+                        <input type="submit" value="Login" class="btn btn-primary pl-4 pr-4 pb-1 pt-1"   />
+                    </form>
+                    
 
-                   
-                        <label asp-for="@Model.Password"></label>
-                        <span asp-validation-for="@Model.Password"></span>
-                        <input asp-for="@Model.Password" type="password"  >
-
-                        <input type="checkbox" asp-for="@Model.RememberMe" />
-                        <label asp-for="@Model.RememberMe">Remember me</label>
-                 
-                        <input type="submit" value="Login" />
-               
-
-                    <div class="text-center p-t-45 p-b-4">
-                        <span class="txt1">
-                            Forgot
-                        </span>
-
-                        <a href="#" class="txt2 hov1">
-                            Username / Password?
-                        </a>
-                    </div>
-
-                    <div class="text-center">
+                    <div class="text-center pt-4">
                         <span class="txt1">
                             Create an account?
                         </span>
@@ -49,7 +39,8 @@
                             Sign up
                         </a>
                     </div>
-                </form>
+                </div>
             </div>
+
         </div>
     </div>
