--- a/Project.Blog.Web/Views/Home/Login.cshtml
+++ b/Project.Blog.Web/Views/Home/Login.cshtml
@@ -10,23 +10,33 @@
             <div class="card my-4">
                 <h5 class="card-header">Login</h5>
                 <div class="card-body text-center">
-                    <form asp-action="Index" asp-controller="Share" method="post">
-                        <div class="form-group">
+                    <form asp-action="Login" asp-controller="Home" method="post">
+                        <div class="form-group" style="padding-left:15px;padding-right:15px">
                             <label asp-for="@Model.Username" style="font-weight:bold"></label>
-                            <span asp-validation-for="@Model.Username"></span>
-                            <input asp-for="@Model.Username">
+                            <input asp-for="@Model.Username" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Password" style="font-weight:bold"></label>
+                            <input asp-for="@Model.Password" type="password">
+
+                        </div>
+                        <div style="text-align:center">
+                            <span asp-validation-for="@Model.Username" class="text-danger"></span>
+
+                        </div>
+                        <div style="text-align:center">
+                            <span asp-validation-for="@Model.Password" class="text-danger "></span>
+                        </div>
+                        <div >
+                            <p class="text-danger">@ViewBag.Message</p>
                         </div>
 
-                        <div class="form-group">
-                            <label asp-for="@Model.Password"  style="font-weight:bold"></label>
-                            <span asp-validation-for="@Model.Password"></span>
-                            <input asp-for="@Model.Password" type="password">
-                        </div>
                         <div class="form-group">
                             <input type="checkbox" asp-for="@Model.RememberMe" />
                             <label asp-for="@Model.RememberMe">Remember me</label>
                         </div>
-                        <input type="submit" value="Login" class="btn btn-primary pl-4 pr-4 pb-1 pt-1"   />
+
+                        <input type="submit" value="Login" class="btn btn-primary pl-4 pr-4" />
                     </form>
                     
 
