--- a/Project.Blog.Web/Views/Home/Index.cshtml
+++ b/Project.Blog.Web/Views/Home/Index.cshtml
@@ -1,15 +1,27 @@
 ﻿@model List<SharingListModel>
-
+@{
+    string displayShortDescription(string description)
+    {
+        int numberOfChars = description.Length;
+        if (numberOfChars < 400)
+        {
+            return description;
+        }
+        else
+        {
+            return description.Substring(0, 400) + "...";
+        }
+    }
+}
 <div class="col-md-8">
-   
     <div class="my-4">
         @foreach (var sharing in Model)
         {
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title">@sharing.Title</h2>
-                    <p class="card-text">@sharing.Description</p>
-                    <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">See Comments</a>
+                    <p class="card-text">@displayShortDescription(@sharing.Description)</p>
+                    <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">Show Details</a>
                 </div>
                 <div class="card-footer text-muted">
                    
