--- a/Project.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Project.Blog.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 
 </head>
 
-<body >
+<body>
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -71,7 +71,7 @@
         </div>
 
     </div>
-    
+
 
 
     <script src="~/jquery/jquery.min.js"></script>
@@ -79,7 +79,7 @@
 
 
 
-  
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
