--- a/Project.Blog.Web/Views/Profile/Index.cshtml
+++ b/Project.Blog.Web/Views/Profile/Index.cshtml
@@ -1,77 +1,48 @@
 ﻿
 
-@model UserListModel
+@model List<SharingListModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
 
 
-<div class="container">
-    <div class="card my-4">
-        <h5 class="card-header">Settings</h5>
-        <div class="card-body">
-            <form asp-action="Index" asp-controller="Profile" method="post">
-                <input name="Id" type="hidden" value="@Model.Id" />
-                <div class="form-group">
-                    <label asp-for="@Model.Username">Username</label>
-                    <input asp-for="@Model.Username" type="text" class="form-control">
-                    <span asp-validation-for="@Model.Username" class="text-danger"></span>
+@{
+    string displayShortDescription(string description)
+    {
+        int numberOfChars = description.Length;
+        if (numberOfChars < 400)
+        {
+            return description;
+        }
+        else
+        {
+            return description.Substring(0, 400) + "...";
+        }
+    }
+}
+<div class="col">
+    <div class="my-4">
+        @foreach (var sharing in Model)
+        {
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="card-title">@sharing.Title</h2>
+                    <p class="card-text">@displayShortDescription(@sharing.Description)</p>
+                    <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">Show Details</a>
                 </div>
-                <div class="row">
-                    <div class="col form-group">
-                        <label asp-for="@Model.Name">Name</label>
-                        <input asp-for="@Model.Name" type="text" class="form-control">
-                        <span asp-validation-for="@Model.Name" class="text-danger"></span>
-                    </div>
-                    <div class="col form-group">
-                        <label asp-for="@Model.LastName">Last Name</label>
-                        <input asp-for="@Model.LastName" type="text" class="form-control">
-                        <span asp-validation-for="@Model.LastName" class="text-danger"></span>
-                    </div>
+                <div class="card-footer text-muted">
+
+                    @sharing.SharingDate.ToString("dddd, MMMM dd yyyy", new System.Globalization.CultureInfo("en-US")) 
+
                 </div>
-                <div class="form-group">
-                    <label asp-for="@Model.Gender">Gender</label>
-                    <select class="form-control" asp-for="@Model.Gender">
-                        <option value="Female">Female</option>
-                        <option value="Male">Male</option>
-                        <option value="Other">Other</option>
-                    </select>
-                    @{ /*<input asp-for="@Model.Gender" type="text" class="form-control">*/
-                    }
-                    <span asp-validation-for="@Model.Gender" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="@Model.PhoneNumber">Phone Number</label>
-                    <input asp-for="@Model.PhoneNumber" type="text" class="form-control">
-                    <span asp-validation-for="@Model.PhoneNumber" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="@Model.Email">Email</label>
-                    <input asp-for="@Model.Email" type="text" class="form-control" readonly>
-                    <span asp-validation-for="@Model.Email" class="text-danger"></span>
-                </div>
-                @{
-                    var result = ViewBag.Result;
-                    if (result != null)
-                    {
-                        <div class="form-group">
-                             <span  class="text-danger">@result</span>
-                        </div>
-                    }
-                }
-                <input type="submit" class="btn btn-primary" value="Save">
-            </form>
-           
-                
-            
-        </div>
+
+            </div>
+        }
+
+        
     </div>
 
+
+
 </div>
-
-@section Scripts{
-
-    
-
-}
